--- a/package.json
+++ b/package.json
@@ -1,5 +1,3 @@
-
-   
 {
   "name": "gatsby-doc",
   "version": "0.0.1",
@@ -17,6 +15,10 @@
   "license": "0BSD",
   "dependencies": {
     "gatsby": "^4.9.2",
+    "gatsby-source-filesystem": "^4.9.1",
+    "gatsby-transformer-remark": "^5.9.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
