--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "0BSD",
   "dependencies": {
     "gatsby": "^4.9.2",
+    "gatsby-plugin-less": "^6.9.0",
     "gatsby-source-filesystem": "^4.9.1",
     "gatsby-transformer-remark": "^5.9.1",
     "lodash": "^4.17.21",
